@@ -1,10 +1,15 @@
 package com.swyp.catsgotogedog.review.service;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
@@ -21,6 +26,9 @@ import com.swyp.catsgotogedog.global.exception.ErrorCode;
 import com.swyp.catsgotogedog.review.domain.entity.Review;
 import com.swyp.catsgotogedog.review.domain.entity.ReviewImage;
 import com.swyp.catsgotogedog.review.domain.request.CreateReviewRequest;
+import com.swyp.catsgotogedog.review.domain.response.ContentReviewPageResponse;
+import com.swyp.catsgotogedog.review.domain.response.MyReviewPageResponse;
+import com.swyp.catsgotogedog.review.domain.response.MyReviewResponse;
 import com.swyp.catsgotogedog.review.domain.response.ReviewImageResponse;
 import com.swyp.catsgotogedog.review.domain.response.ReviewResponse;
 import com.swyp.catsgotogedog.review.repository.ReviewImageRepository;
@@ -49,7 +57,7 @@ public class ReviewService {
 
 		Review uploadedReview = reviewRepository.save(Review.builder()
 			.userId(user.getUserId())
-			.contentId(content.getContentId())
+			.contentEntity(content)
 			.score(request.getScore())
 			.content(request.getContent())
 			.build());
@@ -120,38 +128,73 @@ public class ReviewService {
 
 	// ContentId를 통한 리뷰 목록 조회
 	@Transactional(readOnly = true)
-	public List<ReviewResponse> fetchReviewsByContentId(int contentId, String sort) {
+	public ContentReviewPageResponse fetchReviewsByContentId(int contentId, String sort, Pageable pageable) {
 		validateContent(contentId);
 
-		List<Review> reviews = reviewRepository.findByContentIdWithUserAndReviewImages(contentId, sort);
+		Sort sortObj = createSort(sort);
+		Pageable sortedPageable = PageRequest.of(pageable.getPageNumber(), pageable.getPageSize(), sortObj);
 
-		List<Integer> userIds = reviews.stream()
+		Page<Review> reviewPage = reviewRepository.findByContentIdWithUserAndReviewImages(contentId, sortedPageable);
+
+
+		List<Integer> userIds = reviewPage.getContent().stream()
 			.map(Review::getUserId)
 			.distinct()
 			.collect(Collectors.toList());
 
-		List<User> users = userRepository.findAllById(userIds);
-		Map<Integer, User> userMap = users.stream()
+		Map<Integer, User> userMap = userRepository.findAllById(userIds).stream()
 			.collect(Collectors.toMap(User::getUserId, Function.identity()));
 
-		return reviews.stream()
+		List<ReviewResponse> reviewResponses = reviewPage.getContent().stream()
 			.map(review -> {
 				User user = userMap.get(review.getUserId());
 				return new ReviewResponse(
-					review.getContentId(),
+					review.getContentEntity().getContentId(),
 					review.getReviewId(),
 					user != null ? user.getUserId() : 0,
 					user != null ? user.getDisplayName() : "알 수 없음",
 					user != null ? user.getImageUrl() : "",
 					review.getContent(),
 					review.getScore(),
+					review.getCreatedAt(),
 					review.getRecommendedNumber(),
 					review.getReviewImages().stream()
 						.map(ReviewImageResponse::from)
 						.collect(Collectors.toList())
 				);
-			})
-			.collect(Collectors.toList());
+			}).toList();
+
+		return new ContentReviewPageResponse(
+			reviewResponses,
+			(int) reviewPage.getTotalElements(),
+			reviewPage.getTotalPages(),
+			reviewPage.getNumber(),
+			reviewPage.getSize(),
+			reviewPage.hasNext(),
+			reviewPage.hasPrevious()
+		);
+	}
+
+	// 자신이 작성한 리뷰 목록 페이징
+	@Transactional(readOnly = true)
+	public MyReviewPageResponse fetchReviewsByUserId(String userId, Pageable pageable) {
+		validateUser(userId);
+
+		Page<Review> reviewPage = reviewRepository.findByUserId(Integer.parseInt(userId), pageable);
+
+		List<MyReviewResponse> myReviewResponses = reviewPage.getContent().stream()
+			.map(this::toReviewResponse)
+			.toList();
+
+		return new MyReviewPageResponse(
+			myReviewResponses,
+			(int) reviewPage.getTotalElements(),
+			reviewPage.getTotalPages(),
+			reviewPage.getNumber(),
+			reviewPage.getSize(),
+			reviewPage.hasNext(),
+			reviewPage.hasPrevious()
+		);
 	}
 
 
@@ -188,5 +231,29 @@ public class ReviewService {
 		reviewImageRepository.saveAll(saveImages);
 	}
 
+	private MyReviewResponse toReviewResponse(Review review) {
+		return new MyReviewResponse(
+			review.getContentEntity().getContentId(),
+			review.getContentEntity().getTitle(),
+			review.getReviewId(),
+			review.getContent(),
+			review.getScore(),
+			review.getRecommendedNumber(),
+			review.getCreatedAt(),
+			review.getReviewImages().stream()
+				.map(ReviewImageResponse::from)
+				.toList()
+		);
+	}
+
+	private Sort createSort(String sort) {
+		return switch(sort) {
+			case "r" -> Sort.by(Sort.Direction.DESC, "recommendedNumber")
+				.and(Sort.by(Sort.Direction.DESC, "createdAt"));
+			case "c" -> Sort.by(Sort.Direction.DESC, "createdAt");
+			default -> Sort.by(Sort.Direction.DESC, "recommendedNumber")
+				.and(Sort.by(Sort.Direction.DESC, "createdAt"));
+		};
+	}
 
 }
